# CredStore

./: .gitignore
homepage/: .coverage  .env.test  .example-env  README.md  ai-prompts.txt  config.py  database.py  docker-compose.yml  improvements.txt  llm_prompts.txt  main.py  models.py  pyproject.toml  test_api.py
homepage/api/routers/: __init__.py  admin.py  products.py
homepage/api/schemas/: __init__.py  product.py
homepage/db/: manager.py
homepage/db/dao/: __init__.py  product_dao.py  search_dao.py
homepage/db/models/: __init__.py  product.py
homepage/services/: __init__.py  product_service.py
homepage/tests/integration/: README.md  conftest.py  test_products_api.py
homepage/tests/unit/: test_product_service.py
product_reviews/: .coverage  .env.example  .env.test  API_README.md  LIQUIBASE_SETUP.md  QUICK_START.md  README.md  SETUP_README.md  ai-prompts.txt  config.py  database.py  docker-compose.yml  improvements.txt  liquibase.properties  llm_prompts.txt  main.py  models.py  pyproject.toml  schemas.py  setup.sh  setup_users.py  test_sample.py
product_reviews/api/routers/: reviews.py
product_reviews/api/schemas/: __init__.py  comments.py  common.py  metrics.py  pagination.py  reviews.py
product_reviews/dao/: base_dao.py  comment_dao.py  metrics_dao.py  review_dao.py  user_dao.py
product_reviews/db/: manager.py
product_reviews/db/dao/: __init__.py  comment_dao.py  metrics_dao.py  review_dao.py  user_dao.py
product_reviews/db/migrations/: 01-create-users-table.xml  03-create-comments-table.xml  db.changelog-master.xml
product_reviews/db/models/: __init__.py  base.py  comment.py  metrics.py  review.py  user.py
product_reviews/events/: __init__.py  event_bus.py  handlers.py  review_events.py
product_reviews/migrations/: 02-create-reviews-table.xml  04-create-review-metrics-table.xml  05-create-indexes.xml
product_reviews/routers/: __init__.py  reviews.py
product_reviews/services/: __init__.py  base_service.py  comment_service.py  metrics_service.py  product_validation_service.py  review_service.py
product_reviews/tests/: test_comment_service.py  test_review_service.py
product_reviews/tests/integration/: README.md  conftest.py  test_reviews_api.py
product_reviews/tests/unit/: test_metrics_service.py  test_product_validation_service.py  test_review_service.py
