[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homepage"
version = "0.1.0"
description = "Homepage module for App Store-like system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "motor>=3.3.2",
    "elasticsearch>=8.11.0,<9.0.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.13.1",
]

[tool.setuptools]
py-modules = ["main", "config", "database", "models"]
