[project]
name = "product_reviews"
version = "1.0.0"
description = "FastAPI-based product reviews system with PostgreSQL and Liquibase migrations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.31.0",
    "peewee>=3.17.6",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.10",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "httpx>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dao", "routers", "services"]
include = [
    "*.py",
    "db/migrations/*.xml",
    "liquibase.properties"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = ["E501"]
